# Applify-backend

./: app.py  database.py  llm.py  models.py  pyproject.toml  utils.py
app/: config.py  dependencies.py  main.py
app/api/: analysis.py  auth.py  cover_letters.py  resumes.py  routes.py  users.py
app/core/: database.py  logging.py  security.py
app/models/: dto.py  sql_models.py
app/services/: candidate_service.py  file_service.py  llm_service.py
